--- a/QuantumultX/GetCookies_eval.conf
+++ b/QuantumultX/GetCookies_eval.conf
@@ -1,4 +1,4 @@
-hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com, sf-integral-sign-in.weixinjia.net
+hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com
 ;获取cookie专用，收集自chavy&NobyDa
 
 // 网易云音乐签到
@@ -33,5 +33,3 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 //全民K歌签到
 ^https://node\.kg\.qq\.com/webapp/proxy? url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/qmkg/qmkg.cookie.js
 
-//顺丰速运签到
-^https:\/\/sf-integral-sign-in.weixinjia.net\/app\/index url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
