--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.xmind.cn, api.flexibits.com
+hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.xmind.cn
 
 // 部分脚本仅作分享不代表本人观点
 
@@ -27,6 +27,3 @@ hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, ap
 
 // XMind Unlock Pro
 https:\/\/www\.xmind\.cn\/\_res\/devices url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/XMind.js
-
-// Fantastical Unlock Pro
-^https:\/\/api\.flexibits\.com\/v1\/(auth|account)\/(device|details|appstore-receipt)\/$ url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/Fantastical.js
